src/stylesheets/styles.scss
$black: #000;

:root {
  --font-size: calc(18px + 0.25vw);
}

body {
  font-size: var(--font-size);
}

.name {
  align-self: center;
  grid-area: name;
  padding: 10px 20px;
}

.poster {
  grid-area: poster;

  img {
    filter: drop-shadow(-5px 5px 4px $black);
    justify-content: center;
    max-height: 70vh;
  }
}

.footer {
  align-self: end;
  grid-area: footer;
  justify-content: center;
  margin-top: 2%;
}

.grid-container {
  display: grid;
  grid-auto-rows: minmax(100px auto);
  grid-column-gap: 2.5%;
  grid-template-areas:
    "name name name name name poster poster poster poster"
    ". . . footer footer footer . . .";
  grid-template-columns: repeat(9, 1fr);
  margin: 5% auto 2%;
  max-width: 55em;
}

@media screen and (max-width: 900px) {
  .grid-container {
    display: grid;
    grid-template-areas:
      ". name ."
      ". poster. ";
    grid-template-columns: 20px 1fr 20px;
  }

  .poster {
    align-self: center;
    margin: 1% auto 5%;

    img {
      max-width: 20em;
      min-height: 60vh;
    }
  }
}

